--- a/doc/dirhash.1
+++ b/doc/dirhash.1
@@ -1,4 +1,4 @@
-.TH DIRHASH 1 "October 21, 2022" "DIRHASH 0.3.0"
+.TH DIRHASH 1 "November 13, 2022" "DIRHASH 0.3.1"
 .nh
 .ad l
 .SH NAME
@@ -43,6 +43,16 @@ Message digest to verify in hex string.
 \fB\-ignore_dot\fP
 .RS 4
 Ignore entry starts with '.'.
+.RE
+.PP
+\fB\-ignore_dot_dir\fP
+.RS 4
+Ignore directory starts with '.'.
+.RE
+.PP
+\fB\-ignore_dot_file\fP
+.RS 4
+Ignore file starts with '.'.
 .RE
 .PP
 \fB\-ignore_symlink\fP
