--- a/doc/dirhash.1
+++ b/doc/dirhash.1
@@ -1,4 +1,4 @@
-.TH DIRHASH 1 "February 04, 2022" "DIRHASH 0.3.2"
+.TH DIRHASH 1 "April 22, 2023" "DIRHASH 0.3.3"
 .nh
 .ad l
 .SH NAME
@@ -11,7 +11,7 @@ Recursively walk directory trees and print message digest of regular files.
 .PP
 \fB\-abs\fP
 .RS 4
-Print file path in absolute path.
+Print file paths in absolute path.
 .RE
 .PP
 \fB\-debug\fP
@@ -32,7 +32,7 @@ Defaults to "sha256".
 .PP
 \fB\-hash_only\fP
 .RS 4
-Do not print file path.
+Do not print file paths.
 .RE
 .PP
 \fB\-hash_verify\fP \fI<string>\fP
@@ -42,27 +42,27 @@ Message digest to verify in hex string.
 .PP
 \fB\-ignore_dot\fP
 .RS 4
-Ignore entry starts with '.'.
+Ignore entries start with '.'.
 .RE
 .PP
 \fB\-ignore_dot_dir\fP
 .RS 4
-Ignore directory starts with '.'.
+Ignore directories start with '.'.
 .RE
 .PP
 \fB\-ignore_dot_file\fP
 .RS 4
-Ignore file starts with '.'.
+Ignore files start with '.'.
 .RE
 .PP
 \fB\-ignore_symlink\fP
 .RS 4
-Ignore symbolic link.
+Ignore symbolic links.
 .RE
 .PP
 \fB\-lstat\fP
 .RS 4
-Do not resolve symbolic link.
+Do not resolve symbolic links.
 .RE
 .PP
 \fB\-squash\fP
